--- a/projekts.html
+++ b/projekts.html
@@ -78,7 +78,7 @@
     <div class="container">
 			<div class="project">
             <h2>Coding Projekte</h2>
-            <p>Seht ihr ein paar coding Projekte von mir. Ein Paar meiner Projekte kann man auch <a href="http://mindlessgaming.de/tools" target="_blank">hier</a> finden.</p>
+            <p>Seht ihr ein paar coding Projekte von mir. Ein Paar meiner Projekte kann man auch <a href="/tools" target="_blank">hier</a> finden.</p>
             <a href="https://github.com/mindlessgamingde">Weitere Informationen</a>
 			</div>
         <div class="project">
